--- a/css/block/image-gallery.css
+++ b/css/block/image-gallery.css
@@ -9,6 +9,11 @@
   margin-bottom: calc(var(--bs-gutter-x));
 }
 
+.gallery-div .gallery-item img {
+  max-width: 100%;
+  height: auto;
+}
+
 .ucb-above-content .block-content--type--image-gallery,
 .ucb-below-content .block-content--type--image-gallery {
   padding: 1.5em;
