--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -4,42 +4,29 @@
  * Theme to implement the newsletter section content in email friendly html
  *
 #}
-
-{%
-    set classes = [
-      'paragraph',
-      'paragraph--type--' ~ paragraph.bundle|clean_class,
-      view_mode ? 'paragraph--view-mode--' ~ view_mode|clean_class,
-      not paragraph.isPublished() ? 'paragraph--unpublished'
-    ]
-  %}
-  
-
-  {% block paragraph %}
-	<tbody{{attributes.addClass(classes)}}>
-        <tr>
-            <h2>{{ content.field_newsletter_section_title }}</h2>
-        </tr>
-        {# Article #}
-        <tr>
+  <tr>
+      <h2>{{ content.field_newsletter_section_title|render|striptags|trim }}</h2>
+      <h3>what am i: {{paragraph.field_newsletter_section_style.value}}</h3>
+ </tr>
+    {# Article #}
+    {# If feature #}
 		{% if paragraph.field_newsletter_section_style.value is same as("0") %}
 			{% for key, item in paragraph.field_newsletter_section_select %}
 				{%  if key|first != '#' %}
 					{# Code to render selected article content (thumbnail) #}
 					{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
-                    <img height="200px" width="200px" src="{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri)}}"></img>
-
+                    <img style="margin: 0; border: 0; padding: 0; display: block;" src="{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
 						{# Code to render selected article content (!thumbnail) #}
 					{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
-                        <img height="200px" width="200px" src="{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.fileuri)}}"></img>
+                        <img src="{{file_url(item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.fileuri|image_style('focal_image_square'))}}"/>
 						{# Code to render user made content #}
 					{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
-                    <img height="200px" width="200px" src="{{file_url(item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri)}}"></img>
+                    <img src="{{file_url(item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
 					{% endif %}
 
 					{# Code to render selected article title/url #}
 					{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
-					<div id="feature-article-title-{{key}}">
+					<div id="feature-article-title-email-{{key}}">
 						<h3>
 							<a href="{{ path('entity.node.canonical', {'node': item.entity.field_newsletter_article_select.target_id}) }}">
 								{{ item.entity.field_newsletter_article_select.entity.title.value|render|striptags|trim }}
@@ -48,7 +35,7 @@
 					</div>
 						{# Code to render user made content (title) #}
 					{% elseif item.entity.field_newsletter_content_title.value|render %}
-					<div id="feature-article-user-title-{{key}}">
+					<div id="feature-article-user-title-email-{{key}}">
 						<h3>
 							{{ item.entity.field_newsletter_content_title|view }}
 						</h3>
@@ -58,13 +45,13 @@
 
 					{# Code to render selected article content (categories) #}
 					{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_categories is not empty %}
-						<div class="article-teaser-meta">
+						<div>
 							{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_categories|view }}
 						</div>
 
 						{# Code to render user made content (categories) #}
 					{% elseif item.entity.field_news_content_categories is not empty %}
-						<div class="article-teaser-meta">
+						<div>
 							{{ item.entity.field_news_content_categories|view }}
 						</div>
 					{% endif %}
@@ -72,30 +59,27 @@
 
 					{# Code to render selected article content (summary) #}
 					{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_summary.value|render %}
-						<div class="article-summary" id="feature-article-summary-{{key}}">
+						<div id="feature-article-summary-email-{{key}}">
 							{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_summary|view }}
 						</div>
 
 						{# Code to render selected article content (article text) #}
 					{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_text.value|render %}
-						<div class="article-summary" id="feature-article-summary-text-{{key}}">
+						<div id="feature-article-summary-text-email-{{key}}">
 							{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_text|view }}
 						</div>
 
 						{# Code to render user made content (content text) #}
 					{% elseif item.entity.field_newsletter_content_text.value|render %}
-						<div class="article-summary" id="feature-article-summary-user-text-{{key}}">
+						<div id="feature-article-summary-user-text-email-{{key}}">
 							{{ item.entity.field_newsletter_content_text|view }}
 						</div>
 					{% endif %}
 				{% endif %}
 			{% endfor %}
 		{% else %}
-			<div class="row row-content">
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
-						<div class="col-lg-5 col-8">
-
 							{# Code to render selected article title/url #}
 							{% if item.entity.field_newsletter_article_select.entity.title.value|render %}
 								<h3>
@@ -114,13 +98,13 @@
 
 							{# Code to render selected article content (categories) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_categories is not empty %}
-								<div class="article-teaser-meta">
+								<div>
 									{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_categories|view }}
 								</div>
 
 								{# Code to render user made content (categories) #}
 							{% elseif item.entity.field_news_content_categories is not empty %}
-								<div class="article-teaser-meta">
+								<div>
 									{{ item.entity.field_news_content_categories|view }}
 								</div>
 							{% endif %}
@@ -128,49 +112,48 @@
 
 							{# Code to render selected article content (summary) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_summary.value|render %}
-								<div class="article-summary">
+								<div>
 									{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_summary|view }}
 								</div>
 
 								{# Code to render selected article content (article text) #}
 							{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_text.value|render %}
-								<div class="article-summary">
+								<div>
 									{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_text|view }}
 								</div>
 
 								{# Code to render user made content (content text) #}
 							{% elseif item.entity.field_newsletter_content_text.value|render %}
-								<div class="article-summary">
+								<div>
 									{{ item.entity.field_newsletter_content_text|view }}
 								</div>
 							{% endif %}
-						</div>
-						<div
-							class="col-lg-1 col-4 align-self-center">
+						<div>
 							{# Code to render selected article content (thumbnail) #}
 							{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
 								<img
+                                width="100px"
+                                height="100px"
 								src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render }}"/>
 
 								{# Code to render selected article content (!thumbnail) #}
 							{% elseif item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render %}
 								<img
+                                width="100px"
+                                height="100px"
 								src="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_article_select.entity.field_ucb_article_content.entity.field_article_media_selection.entity.field_media.entity.field_media_image.alt|render }}"/>
 
 								{# Code to render user made content #}
 							{% elseif item.entity.field_newsletter_content_image.entity.field_media_image.alt|render %}
-								<img src="{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
+								<img
+                                width="100px"
+                                height="100px"
+                                 src="{{ item.entity.field_newsletter_content_image.entity.field_media_image.entity.fileuri|image_style('focal_image_square') }}" alt="{{ item.entity.field_newsletter_content_image.entity.field_media_image.alt|render }}"/>
 							{% endif %}
 						</div>
 					{% endif %}
 				{% endfor %}
-			</div>
 		{% endif %}
 		{% if content.field_newsletter_section_link|render %}
 			{{ content.field_newsletter_section_link }}
 		{% endif %}
-        </tr>
-    </tbody>
-{% endblock paragraph %}
-
-  
