wip: Adds promo img 1 and 2, still needs category tags per article and blocks 1 and 2

--- a/templates/content/node--newsletter--email-html.html.twig
+++ b/templates/content/node--newsletter--email-html.html.twig
@@ -19,6 +19,7 @@
     <div id="email" style="width:600px;margin: auto;background:white;">
         <table role="presentation" border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: #f2f2f2;">
             <!-- Header --> 
+            {# TO DO: Header #}
             <tr>
                 <h1 id="newsletter-email-title" style="padding: 30px 30px 15px 60px;font-size: 52px; margin:0 0 20px 0; font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;"> {{ content.field_newsletter_type }}</h1>
               <td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
@@ -38,5 +39,61 @@
         <!--Newsletter Section-->
         {{content.field_newsletter_section_block|render}}
             {% endif %}
+        <!--Ad One-->
+			{% if content.field_newsletter_promo_image_one|render %}
+				{% if content.field_newsletter_promo_link_one|render %}
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <a href="{{ content.field_newsletter_promo_link_one|render|striptags|trim }}">
+                                    <img src="{{file_url(node.field_newsletter_promo_image_one.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
+                                </a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+				{% else %}
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>
+                                <img src="{{file_url(node.field_newsletter_promo_image_one.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+				{% endif %}
+			{% endif %}
+        <!--Promo Blocks-->
+        {# TO DO - Promo Blocks #}
+        <!--Ad Two-->
+        {% if content.field_newsletter_promo_image_two|render %}
+        {% if content.field_newsletter_promo_link_two|render %}
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        <a href="{{ content.field_newsletter_promo_link_two|render|striptags|trim }}">
+                            <img src="{{file_url(node.field_newsletter_promo_image_two.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
+                        </a>
+                    </td>
+                </tr>
+            </tbody>
+        </table>
+        {% else %}
+        <table>
+            <tbody>
+                <tr>
+                    <td>
+                        <img src="{{file_url(node.field_newsletter_promo_image_two.entity.field_media_image.entity.fileuri|image_style('focal_image_square'))}}"/>
+                    </td>
+                </tr>
+            </tbody>
+        </table>	
+        {% endif %}
+    {% endif %}
+        <!--Footer-->
+        {# TO DO: Footer #}
     </div>
 </div>
