--- a/templates/content/node--newsletter.html.twig
+++ b/templates/content/node--newsletter.html.twig
@@ -26,49 +26,13 @@ view_mode ? 'node--view-mode-' ~ view_mode|clean_class,
     {% set isLoggedIn = "true" %}
 {% endif %}
 
-{# EMAIL HTML RENDER
-{% if isLoggedIn %}
-	<div class="container" id="email-preview" style="background-color: grey">
-		<div id="email" style="width:600px;margin: auto;background:white;">
-			<table role="presentation" border="0" width="100%" cellspacing="0" style="border-collapse: collapse; border-spacing: 0; padding: 0; text-align: left; vertical-align: top; height: 100%; width: 100%; color: #222222; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 19px; margin: 0; font-size: 14px; background-color: #f2f2f2;">
-				<!-- Header --> 
-				<tr>
-					<h1 id="newsletter-email-title" style="padding: 30px 30px 15px 60px;font-size: 52px; margin:0 0 20px 0; font-family:Roboto, Helvetica Neue, Helvetica, Arial, sans-serif;"> {{ content.field_newsletter_type }}</h1>
-				  <td align="center" style="text-align: left; padding-right:10px; padding-left:10px">
-				<!-- Intro Img --> 
-					{% if content.field_newsletter_intro_image|render %}
-					<img id="newsletter-email-intro-img" src="{{file_url(node.field_newsletter_intro_image.entity.field_media_image.entity.fileuri)}}" width="100%" style="margin-bottom: 20px;">
-					{% endif %}
-				<!-- Intro Text-->
-					{% if content.field_newsletter_intro_body|render %}
-					<div id="newsletter-intro-body">{{ content.field_newsletter_intro_body }}</div>
-					{% endif %}
-					</td>
-				</tr>
-			</table>
-			{% if content.field_newsletter_section_block|render %}
-			<!--Newsletter Section-->
-				<tbody>
-					<tr style="max-width: 600px;">
-						<td align="center" style="text-align: left; padding-right:10px; padding-left:10px; width:100%;max-width:600px">
-							{% set displayType = 'email' %}
-							{{ include('paragraph--newsletter-section.html.twig',{displayType:displayType} ) }}
-							{{content.field_newsletter_section_block|render}}						
-						</td>
-					</tr>
-				</tbody>
-			{% endif %}
-		</div>
-	</div> #}
-{# {% endif %} #}
-
 <article{{attributes.addClass(classes)}}>
 	<div
 		class="container ucb-newsletter"
 		data-loggedin="{{isLoggedIn}}"
 		>
 		{# Newsletter Title #}
-		<h1 class="ucb-newsletter-title" itemprop="name">{{ content.field_newsletter_type }}</h1>
+		<h1 class="ucb-newsletter-title" itemprop="name">{{ label }}</h1>
 		{# Newsletter Intro #}
 		{% if content.field_newsletter_intro_image|render %}
 			<div id="newsletter-intro-img">{{ content.field_newsletter_intro_image }}</div>
