--- a/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
+++ b/templates/paragraphs/paragraph--newsletter-section--email-html.html.twig
@@ -8,7 +8,7 @@
  * See: https://www.w3schools.com/html/html_tables.asp
 #}
 {% block paragraph %}
-<table>
+<table role="presentation">
 	<tbody>
   		<tr>
 			<td>
@@ -25,7 +25,7 @@
 				{%  if key|first != '#' %}
 					{# Code to render selected article content (thumbnail) #}
 					<!--Feature Article-->
-					<table>
+					<table role="presentation">
 						<tbody>
 							<tr>
 								{% if item.entity.field_newsletter_article_select.entity.field_ucb_article_thumbnail.entity.field_media_image.alt|render %}
@@ -112,7 +112,7 @@
 				{% for key, item in paragraph.field_newsletter_section_select %}
 					{%  if key|first != '#' %}
 					<!--Teaser Article-->
-					<table>
+					<table role="presentation">
 						<tbody>
 							<tr>
 								{# Image #}
@@ -141,7 +141,7 @@
 								</td>
 								{# Header, Summary, Cats #}
 								<td>
-									<table>
+									<table role="presentation">
 										<tbody>
 											{# Header #}
 											<tr>
